refactor: health into separate go module
